Fix table colors in dark mode

--- a/src/Bootstrap/less/theme/common-readme.less
+++ b/src/Bootstrap/less/theme/common-readme.less
@@ -13,19 +13,19 @@
 .readme-common {
   .table {
     width: max-content;
-    border: 1px solid @table-border-color;
+    border: 1px solid var(--neutralStroke2Rest);
     overflow: auto;
     display: block;
     word-break: normal;
     th, td {
-      border: 1px solid @table-border-color;
+      border: 1px solid var(--neutralStroke2Rest);
     }
   }
 
   tr:nth-child(even) {
-    background-color: @readme-table-bg-color;
+    background-color: var(--neutralBackground3Rest);
     a {
-      color: @readme-table-link-color
+      color: var(--brandForegroundLinkRest);
     }
   }
 
